[gd_scene load_steps=44 format=2]

[ext_resource path="res://warped-files/PNG/spritesheets/player/player-idle.png" type="Texture" id=1]
[ext_resource path="res://_scenes/plyer.gd" type="Script" id=2]
[ext_resource path="res://warped-files/PNG/spritesheets/player/player-run.png" type="Texture" id=3]
[ext_resource path="res://warped-files/PNG/spritesheets/player/player-run-shoot.png" type="Texture" id=4]
[ext_resource path="res://warped-files/PNG/spritesheets/player/player-jump.png" type="Texture" id=5]
[ext_resource path="res://_scenes/bullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://warped-files/PNG/spritesheets/player/player-stand-shoot.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 5, 19 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 11 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "jump",
"speed": 12.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "run_shoot",
"speed": 12.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "shoot",
"speed": 8.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 113, 121 )
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
bullet = ExtResource( 6 )

[node name="StandCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 33 )

[node name="JumpCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="CheckGroundRayCast" type="RayCast2D" parent="."]
position = Vector2( -5, 0 )
enabled = true
cast_to = Vector2( 0, 24 )

[node name="CheckGroundRayCast2" type="RayCast2D" parent="."]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 0, 24 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "shoot"

[node name="MuzzleGunPos" type="Position2D" parent="."]
position = Vector2( 16, -2 )

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="timeout" from="FireRateTimer" to="." method="_on_FireRateTimer_timeout"]
